--- a/challenge_6/index.html
+++ b/challenge_6/index.html
@@ -68,10 +68,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                           Released: 2018
                           <br>
                           <!-- modal -->
-                          <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">
+                          <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal7">
                             Read More
                           </button>
-                          <div class="modal" id="myModal">
+                          <div class="modal" id="myModal7">
                             <div class="modal-dialog">
                               <div class="modal-content">
                                 <div class="modal-header">
@@ -116,10 +116,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                           Released: 2016
                           <br>
                           <!-- modal -->
-                          <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">
+                          <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal6">
                             Read More
                           </button>
-                          <div class="modal" id="myModal">
+                          <div class="modal" id="myModal6">
                             <div class="modal-dialog">
                               <div class="modal-content">
                                 <div class="modal-header">
@@ -164,10 +164,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                           2013
                          <br>
                           <!-- modal -->
-                          <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">
+                          <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal5">
                             Read More
                           </button>
-                          <div class="modal" id="myModal">
+                          <div class="modal" id="myModal5">
                             <div class="modal-dialog">
                               <div class="modal-content">
                                 <div class="modal-header">
@@ -216,10 +216,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                           2011
                           <br>
                           <!-- modal -->
-                          <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">
+                          <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal4">
                             Read More
                           </button>
-                          <div class="modal" id="myModal">
+                          <div class="modal" id="myModal4">
                             <div class="modal-dialog">
                               <div class="modal-content">
                                 <div class="modal-header">
@@ -267,10 +267,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                           2008
                           <br>
                           <!-- modal -->
-                          <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">
+                          <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal3">
                             Read More
                           </button>
-                          <div class="modal" id="myModal">
+                          <div class="modal" id="myModal3">
                             <div class="modal-dialog">
                               <div class="modal-content">
                                 <div class="modal-header">
@@ -319,10 +319,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                           2005
                           <br>
                           <!-- modal -->
-                          <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">
+                          <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal2">
                             Read More
                           </button>
-                          <div class="modal" id="myModal">
+                          <div class="modal" id="myModal2">
                             <div class="modal-dialog">
                               <div class="modal-content">
                                 <div class="modal-header">
