--- a/challenge_6/index.html
+++ b/challenge_6/index.html
@@ -28,19 +28,18 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
         <div class="nabarthing">
          <div class="w3-bar w3-card w3-left-align w3-large w3-gray">
             <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-large" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-black"><img src="images/patd2.png" alt="logo"></a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black">Official Site</a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black">Merch</a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black">Listen!</a>
+            <a href="https://tkennedy3.github.io/webdev1819/challenge_6/index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black"><img src="images/patd2.png" alt="logo"></a>
+            <a href="https://panicatthedisco.com/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black">Official Site</a>
+            <a href="https://store.panicatthedisco.com/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black">Merch</a>
+            <a href="https://open.spotify.com/artist/20JZFwl6HVl6yg8a4H3ZqK" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black">Listen!</a>
         </div>
       </div>
     
       <!-- Navbar on small screens -->
       <div id="navDemo" class="w3-bar-block w3-grey w3-hide w3-hide-large w3-hide-medium w3-large">
-        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-black">Albums</a>
-        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-black">Members</a>
-        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-black">Tours</a>
-        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-black">History</a>
+        <a href="https://panicatthedisco.com/" class="w3-bar-item w3-button w3-padding-large w3-hover-black">Official Site</a>
+        <a href="https://store.panicatthedisco.com/" class="w3-bar-item w3-button w3-padding-large w3-hover-black">Merch</a>
+        <a href="https://open.spotify.com/artist/20JZFwl6HVl6yg8a4H3ZqK" class="w3-bar-item w3-button w3-padding-large w3-hover-black">Listen!</a>
       </div>
     </div>
 
