--- a/challenge_6/index.html
+++ b/challenge_6/index.html
@@ -126,7 +126,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
-                                  infooo
+                                  The 5th studio album by Panic!, Death Of A Bachelor was another great hit for the band.
                                   <br>
                                   <h5>Songs</h5>
                                   <ol>
@@ -174,7 +174,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
-                                  info info
+                                  With amazing songs such as "Girls/Girls/Boys", the band's 4th album is another to be celebrated. 
                                   <br>
                                   <h5>Songs</h5>
                                   <ol>
@@ -226,7 +226,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
-                                  info info 
+                                  While this album is also a hit, Panic!'s 3rd album is considered underapprieciated by many fans.  
                                   <br>
                                   <h5>Songs</h5>
                                   <ol>
@@ -277,7 +277,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
-                                  info info info info
+                                  While this album is probably the least popular now, it is still considered an amazing work in the eyes of the fans.
                                   <br>
                                   <H5>Songs</H5>
                                   <ol>
@@ -329,7 +329,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
-                                  info info 
+                                  As the band's first ever studio album, "A Fever You Can't Sweat Out" is considered a classic in the hearts of many, including the song that started it all, "I Write Sins, Not Tragedies".
                                   <br>
                                   <h5>Songs</h5>
                                   <ol>
@@ -372,7 +372,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
         </div>
         <div class="w3-twothird">
           <h4>Brendon Urie</h4>
-          <p class="bandtext">(2004-PRESENT) FILLER TEXT MY DUDE</p>
+          <p class="bandtext">(2004-PRESENT); lead vocals, guitar, piano, keyboards (2004–present); bass guitar (2005–2010, 2015–present); drums (2015–present)</p>
         </div>
       </div>
     </div>
@@ -380,7 +380,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <div class="w3-content">
         <div class="w3-twothird">
           <h4>Ryan Ross</h4>
-          <p class="bandtext">(2004-2009) FILLER TEXT MY DUDE</p>
+          <p class="bandtext">(2004-2009); lead guitar, vocals, piano, keyboards, synthesizers (2004–2009); lead vocals (2004)</p>
         </div>
         <div class="w3-third w3-center">
           <img src="images/ryanross.jpg" alt="Ryan Ross" class="bandpics">
@@ -394,7 +394,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
         </div>
         <div class="w3-twothird">
           <h4>Dallon Weekes</h4>
-          <p class="bandtext">(2010-2015) FILLER TEXT MY DUDE</p>
+          <p class="bandtext">(2010-2015); drums, percussion (2004–2015; inactive 2013–2015)</p>
         </div>
       </div>
     </div>
@@ -402,7 +402,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <div class="w3-content">
         <div class="w3-twothird">
           <h4>Jon Walker</h4>
-          <p class="bandtext">(2006-2009) FILLER TEXT MY DUDE</p>
+          <p class="bandtext">(2006-2009);bass guitar, backing vocals, piano, keyboards, guitar (2006–2009)</p>
         </div>
         <div class="w3-third w3-center">
           <img src="images/jonwalker.jpg" alt="Jon Walker" class="bandpics">
@@ -416,7 +416,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
         </div>
         <div class="w3-twothird">
           <h4>Spencer Smith</h4>
-          <p class="bandtext">(2004-2015) FILLER TEXT MY DUDE</p>
+          <p class="bandtext">(2004-2015);bass guitar, vocals, piano, keyboards, guitar (2010–2015; touring member 2009–2010, 2015–2017)</p>
         </div>
       </div>
     </div>
