--- a/Canvas/canvas1.html
+++ b/Canvas/canvas1.html
@@ -3,7 +3,7 @@
 <html>
     <head></head>
     <body>
-        <canvas id="myCanvas" width="400" height="400"></canvas>
+        <canvas id="myCanvas" width="400" height="400"> 
         <script language = "javascript">
             var canvasElement = document.querySelector("#myCanvas");
             var context = canvasElement.getContext("2d");
@@ -63,6 +63,8 @@
                         break;
                             }   
                     }
+            //why won't this work???????? u g h 
          </script>
+         </canvas>
     </body>
 </html>
