--- a/brickBreaker/index.html
+++ b/brickBreaker/index.html
@@ -78,6 +78,7 @@
                     } else if(y + dy > canvas.height - ballRadius) {
                     	if(x > paddleX && x < paddleX + paddleWidth) {
                     		dy = -dy;
+                    		ballColor = "purple"
                     	}else{
                     	    //alert("GAME OVER! Reload the page!");
 	                        document.location.reload();
