--- a/brickBreaker/index.html
+++ b/brickBreaker/index.html
@@ -33,8 +33,8 @@
                 var bricks = [];
                 for(var c = 0; c < brickColumnCount; c++){
                 	bricks[c] = [];
-                	for(var r = 0; r < brickRowCount; r++){
-                		bricks[c][r] = { x:0, y:0 };
+                	for(var r = 0; r < brickRowCount;  r++){
+                		bricks[c][r] = { x: 0, y: 0, status: 1 };
                 	}
                 }
                 function drawBall(){
@@ -57,7 +57,7 @@
                 			bricks[c][r].x = 0;
                 			bricks[c][r].y = 0;
                 			ctx.beginPath();
-                			ctx.rect(brickX, brickY, brickWidth, brickHeight);
+                			ctx.rect(0, 0, brickWidth, brickHeight);
                 			ctx.fillStyle = "purple";
                 			ctx.fill();
                 			ctx.closePath();
@@ -69,6 +69,9 @@
                 		for(var r = 0; r < brickRowCount; r++){
                 			var b = bricks[c][r];
                 			// Calculations
+                			if(x > brickX && x < brickX + brickWidth && y > brickY && y < brickY + brickHeight){
+                			    dy*(-dy);
+                			}
                 		}
                 	}
                 }
