--- a/brickBreaker/index.html
+++ b/brickBreaker/index.html
@@ -93,8 +93,8 @@
                     }
                 }
                 if(score==bricks.length*bricks[0].length){
-                    dy=-dy
-                    alert("You Win");
+                    dy=-dy;
+                    alert("You Win!");
                 }
             }
                 function draw(){
@@ -107,9 +107,11 @@
                     drawLives();
                 if(x + dx > canvas.width - ballRadius || x + dx < ballRadius){
 	                dx = -dx;
+	                ballColor = "red";
                 }
             	if(y + dy < ballRadius){
                 	dy = -dy;
+                	ballColor = "blue";
                 } else if(y + dy > canvas.height - ballRadius) {
                 	if(x > paddleX && x < paddleX + paddleWidth) {
                 	    if(x>paddleX+paddleWidth/2){
@@ -141,16 +143,12 @@
                     	lives--;
                     	if (lives < 0)
                     	{
-                    	    alert("You ran out of lives");
+                    	    alert("You ran out of lives :(");
                     	    document.location.reload();
                     	    
                     	}
                 	}
                 }
-                     if(x + dx > canvas.width - ballRadius || x + dx < ballRadius){
-                    	dx = -dx;
-                    	ballColor = "blue";
-                    }
                     if(rightPressed && paddleX < canvas.width-paddleWidth){
                     	paddleX += 7;
                     } else if(leftPressed && paddleX > 0){
