--- a/FINAL final project/index.html
+++ b/FINAL final project/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body style = "background-color:lightgrey;">
 <!--Things to do: -Make sign in area reach the bottom of the pic  -fix the our goal paragraph area -->
@@ -81,7 +83,7 @@
       </div>
       <div class="col-sm-3" id="signIn">
         <h3>Sign In</h3>
-        <p>Already registered? sign in with your Pearson account.</p>
+        <p>Already registered? Sign in with your Pearson account.</p>
         <div class="form-group">
           <input type="text" class="form-control" placeholder="username" name="text1">
         </div>
@@ -111,7 +113,7 @@
     <div class="col-sm-6">
       <img src="images/video.png" style="width:100%; margin-top:20px;">
       <p><b>Truth in Numbers 2.0</b> In December 2014 we surveyed thousands of college studentsabout their experiences with MyLab & Mastering by Pearson. Here's what they had to say.</p>
-      <p><b>Have trouble watching the video?</b><a> View the transcript</a></p>
+      <p><b>Have trouble watching the video?</b><a> View the transcript<i class="material-icons" style="font-size:15px;">launch</i></a></p>
     </div>
   </div>
 </div>
@@ -150,11 +152,11 @@
     </div>
     <div class="col-md-2">
       <h4 style="color:grey">Pearson Higher Education</h4>
-      <p>Visit our website</p>
+      <p>Visit our website<i class="material-icons" style="font-size:15px;">launch</i></p>
     </div>
 </div>
 </div>
 <div class="container" style="background-color:rgb(60,60,60); width:100%; color:grey;">
-  <p>Copyright ©2016 <a style="color:white;">Pearson Education</a> Inc., All Rights Reserved | <a style="color:white;">Pearson Higher Education | Legal Notice | Privacy Policy | Permissions</a><button class="button button5">TOP</button></p>
+  <p>Copyright ©2016 <a style="color:white;">Pearson Education<i class="material-icons" style="font-size:15px;">launch</i></a> Inc., All Rights Reserved | <a style="color:white;">Pearson Higher Education<i class="material-icons" style="font-size:15px;">launch</i> | Legal Notice<i class="material-icons" style="font-size:15px;">launch</i> | Privacy Policy<i class="material-icons" style="font-size:15px;">launch</i> | Permissions<i class="material-icons" style="font-size:15px;">launch</i></a><button class="button button5">TOP</button></p>
 </div>
 </body>
