--- a/FINAL final project/index.html
+++ b/FINAL final project/index.html
@@ -13,7 +13,7 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body style = "background-color:lightgrey;">
-<!--Things to do: -Make sign in area reach the bottom of the pic  -fix the our goal paragraph area -->
+<!--Things to do: -Make sign in area reach the bottom of the pic (kinda done)  -fix the our goal paragraph area (don't wanna do...) -->
 <nav class="navbar navbar-inverse navbar-fixed-top" id="top">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -81,7 +81,9 @@
           </div>
       </div>
       </div>
-      <div class="col-sm-3" id="signIn">
+      <div class="col-sm-1">
+      </div>
+      <div class="col-sm-2" id="signIn">
         <h3>Sign In</h3>
         <p>Already registered? Sign in with your Pearson account.</p>
         <div class="form-group">
